    locales.
  * mv patches/hurd-i386/{submitted,cvs}-ttyname.diff.
  * mv patches/hurd-i386/{submitted,cvs}-getnprocs.diff.
  * patches/hurd-i386/local-i686.diff: New patch to fix i686 build.
  * patches/hurd-i386/local-no-hp-timing.diff: New patch to disable i686 HP
    timing support.
  * testsuite-checking/expected-results-i686-{i386,i686,xen}: New
    expected results.

  [ Petr Salinger ]
  * kfreebsd/local-sysdeps.diff: update to revision 3156 (from glibc-bsd).
    Closes: #522698.
  * Add kfreebsd/local-grantpt.diff to handle EINTR returned by waitpid. 
    It fixes konsole blank (terminal) display on kfreebsd-*. Closes: #573063.

  [ Clint Adams ]
  * Reflect EGLIBC in binary package short descriptions.  closes: #587586.

  [ Aurelien Jarno ]
  * Always try to restart init when needed, and ignore the possible errors.
    Closes: #588922, 590175.
  * Look for apache2.2-common instead of apache2-common in nsscheck. 
    Closes: #586527.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 30 Jul 2010 22:18:39 +0200

eglibc (2.11.2-2) unstable; urgency=medium

  [ Aurelien Jarno ]
  * control.in/libc: update the Conflicts on binutils to (<< 2.20.1-1)
    and add a Conflicts on binutils-gold (<< 2.20.1-11). Closes: #585937.
  * Replace patches/alpha/local-longjmp-chk.diff by upstream version
    patches/alpha/cvs-longjmp-chk.diff.
  * Add patches/any/cvs-redirect-throw.diff to fix some header files
    with regard to C++.
  * Add patches/any/cvs-flush-cache-textrels.diff to fix random crashes
    on ARM, if the executable or shared library has TEXTREL.
  * Add patches/any/cvs-__block.diff from upstream to not conflict with
    clang.
  * script.in/nohwcap.sh: consider all packages not in status "n" (not
    installed) and not in status "c" (conf-files) as installed.  Closes:
    bug#586241.

  [ Samuel Thibault ]
  * patches/hurd-i386/local-pthread_posix-option.diff: Avoid letting glibc try
    to install its own headers for libpthread.

  [ Carlos O'Donell]