@@ -3,7 +3,7 @@ Architecture: @archs@
 Section: libs
 Priority: required
 Depends: libc-bin (= ${binary:Version}), hurd (>= 20070606-1+SVN) [hurd-i386], libgcc1 [!hppa !m68k], libgcc2 [m68k], libgcc4 [hppa]
-Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386]
+Recommends: libc6-i686 [i386], libc0.1-i686 [kfreebsd-i386], libc0.3-i686 [hurd-i386]
 Suggests: glibc-doc, debconf | debconf-2.0, locales [!hurd-i386]
 Provides: ${locale-compat:Depends}
 Conflicts: tzdata-etch, tzdata (<< 2007k-1)
