@@ -61,6 +61,37 @@ Description: Embedded GNU C Library: Shared libraries [i686 optimized]
  (including clones such as AMD Athlon/Opteron, VIA C3 Nehemiah, but not VIA 
  C3 Ezla).  
 
+Package: libc0.3-i686
+Architecture: hurd-i386
+Section: libs
+Priority: extra
+Pre-Depends: libc0.3 (= ${binary:Version})
+Depends: ${misc:Depends}
+Description: Embedded GNU C Library: Shared libraries [i686 optimized]
+ Contains the standard libraries that are used by nearly all programs on
+ the system. This package includes shared versions of the standard C
+ library and the standard math library, as well as many others.
+ .
+ This set of libraries is optimized for i686 machines, and will only be
+ used on an i686 class CPU (check the output of `uname -m').  This includes 
+ Pentium Pro, Pentium II/III/IV, Celeron CPU's and similar class CPU's
+ (including clones such as AMD Athlon/Opteron, VIA C3 Nehemiah, but not VIA 
+ C3 Ezla).  
+
+Package: libc0.3-xen
+Architecture: hurd-i386
+Section: libs
+Priority: extra
+Pre-Depends: libc0.3 (= ${binary:Version})
+Depends: ${misc:Depends}
+Description: Embedded GNU C Library: Shared libraries [Xen version]
+ Contains the standard libraries that are used by nearly all programs on
+ the system. This package includes shared versions of the standard C
+ library and the standard math library, as well as many others.
+ .
+ This set of libraries is optimized for the Xen hypervisor, and will be
+ selected instead when running under Xen.
+
 Package: libc6.1-alphaev67
 Architecture: alpha
 Section: libs
