@@ -13,6 +13,8 @@ eglibc (2.11.2-3) UNRELEASED; urgency=low
     timing support.
   * testsuite-checking/expected-results-i686-{i386,i686,xen}: New
     expected results.
+  * debian/control, debian/control.in/libc, debian/control/opt,
+    debian/sysdeps/hurd-i386.mk: Add lib0.3-{i686,xen} variants.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 3156 (from glibc-bsd).
